[package]
name = "pardalotus_snapshot_tool"
authors = ["Joe Wass <joe@afandian.com>"]
description = "Tools to work with scholarly metadata snapshots from DataCite and Crossref."
readme = "README.md"
repository = "https://github.com/pardalotus/pardalotus_snapshot_tool"
license = "Apache-2.0"
keywords = ["identifiers", "metadata", "doi", "archive"]
version = "0.1.0"
homepage = "https://pardalotus.tech/open-source/snapshot-tool"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = "4.5.23"
flate2 = "1.0.35"
rayon = "1.10.0"
serde_json = "1.0.133"
structopt = "0.3.26"
tar = "0.4.43"

[profile.release]
debug = true
